# toprefix

./: .gitignore  README.md  main.py  pyproject.toml
tests/: env_test.py  toml_test.py
toprefix/: __main__.py  envman.py  packages.py  runenv.py  util.py  vcenv.py
toprefix/assets/: packages.toml
toprefix/assets/patches/w3m/w3m/: w3m.toml
toprefix/package/: __init__.py  autotools_pkg.py  bazel_pkg.py  cmake_pkg.py  custom_pkg.py  make_pkg.py  meson_pkg.py  pkg.py  prebuilt_pkg.py  source.py
toprefix/source/: __init__.py  archive.py  gitrepository.py  name_version.py  source.py
