[build-system]
requires = [
    "setuptools",
    "setuptools_scm[toml] >= 3.5.0",
    #
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "toprefix/_version.py"

[project]
name = "toprefix"
description = "Build automation to prefix."
keywords = []
license = { text = "BSD 3-Clause License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    #
]
requires-python = ">=3.10"
dependencies = ["meson", "tqdm", "toml", "colorama"]
dynamic = ["version"]

[project.scripts]
toprefix = "toprefix.__main__:main"

[tool.readmd]
file = "README.md"
